--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ env: &env
       # Common options
       # ------------------------------------------------------------------------
       # GHC_OPTIONS: "-Werror"
-      CABAL_REINIT_CONFIG: "y"
+      CABAL_REINIT_CONFIG: 'y'
       LC_ALL: "C.UTF-8"
 
       # ------------------------------------------------------------------------
