--- a/p1.cabal
+++ b/p1.cabal
@@ -24,3 +24,8 @@ library
   build-depends:    base ^>=4.12.0.0
   hs-source-dirs:   src
   default-language: Haskell2010
+
+Test-Suite TestFoo
+    type:       exitcode-stdio-1.0
+    main-is:    test/TestFoo.hs
+    build-depends: base >= 4 && < 5
