--- a/p1.cabal
+++ b/p1.cabal
@@ -4,18 +4,21 @@ cabal-version:       2.4
 
 name:               p1
 version:            0.1.0.0
--- synopsis:
--- description:
+synopsis:           something
+description:        nothing special
 homepage:           haskell.alexakarpov.xyz
 -- bug-reports:
 license:            MIT
 license-file:       LICENSE
 author:             Alexandre Karpov
 maintainer:         alexakarpov@gmail.com
--- copyright:
--- category:
+copyright:          Alexandre Karpov 2019
+category:           testing
 extra-source-files: CHANGELOG.md
 
+source-repository head
+                  type: git
+                  location: https://github.com/alexakarpov/hsp1
 library
   exposed-modules:  Chapter2.Section2.Example
   -- other-modules:
@@ -29,3 +32,4 @@ Test-Suite TestFoo
     type:       exitcode-stdio-1.0
     main-is:    test/TestFoo.hs
     build-depends: base >= 4 && < 5
+    default-language:    Haskell2010
